# leanstore

frontend/: CMakeLists.txt
frontend/networking/: BitCast.hpp  OBuffer.hpp  server.hpp  server_epoll.hpp  server_io_uring.hpp
frontend/tpcc-net/: local.cmake
frontend/tpcc-net/client/: Parser.hpp  Serializer.cpp  Serializer.hpp  tpcc-client.cpp  workload.hpp
frontend/tpcc-net/server/: Parser.hpp  schema.hpp  tpcc-server.cpp  workload.cpp  workload.hpp
frontend/tpcc-net/shared/: TransactionTypes.hpp  types.hpp
