add_executable(frontend frontend.cpp)
add_dependencies(frontend leanstore)
target_link_libraries(frontend leanstore)


add_executable(ycsb ycsb/ycsb.cpp)
target_link_libraries(ycsb leanstore Threads::Threads)
target_include_directories(ycsb PRIVATE ${SHARED_INCLUDE_DIRECTORY})

add_executable(tpcc tpc-c/tpcc.cpp)
target_link_libraries(tpcc leanstore Threads::Threads)
target_include_directories(tpcc PRIVATE ${SHARED_INCLUDE_DIRECTORY})


# networking includes
set(NET_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/networking)

# TPCC over network
include("${CMAKE_CURRENT_SOURCE_DIR}/tpcc-net/local.cmake")
